FINERACT-2389: Fix the handling of nullable field overrides